Replace ArrayList with LinkedList.
My only concern of using LinkedList is that the implementation of get is O(n). But I checked that the only usage of get is to get the last or the second last element, which is O(1) in LinkedList. So I changed to LinkedList.